--- a/404.md
+++ b/404.md
@@ -1,5 +1,5 @@
 ---
 permalink: /404.html
 ---
-You're trying to access a page that doesn't exist!!!
+You're trying to access a page that doesn't exist!!!<br>
 ENTER A VALID PAGE ID...
